Gnumeric 1.1.8

dorami@bu.iij4u.or.jp:
	* Begin to use Pango in cells.

Jody:
	* Add XL for polygon colours.
	* More pango work.
	* Fix icon assignment.
	* Support pasting utf8
	* Rewrite plan perfect import, significantly more useful now.
	  Includes some format transfer and uses the wordperfect
	  charset map from kword (thanks to Ariya Hidayat)

Jukka:
	* Solver improvements:
	  - Imported the GLPK (GNU linear programming kit) version 3.2.
	    It provides a revised simplex algorithm for solving large
	    scale problems, written by Andrew Makhorin.  It performs 
	    much better than lp-solve if the model is large, see
	    a benchmark in ftp://plato.la.asu.edu/pub/lpsimp.txt.
	  - Added the algorithm selection into the dialog.
	  - Other dialog improvements.
	* Speed optimizations for the MPS plugin.

Morten:
	* Add poor man's utf8 regexp routines.

Christian Meyer:
	* Renamed "Print Setup" to "Page Setup" in the file menu and the
	  gnumeric documents.

--------------------------------------------------------------------------
Gnumeric 1.1.7

Jody:
	* Fix and speed up the XL exporter.
	* Make the behaviour for right button consistent in all contexts.
	* Fix import of frozen panes.
	* Fix XL export of functions with fewer args than XL requires
	* Improve the wk1 importer
	* Implement some of Harlan's CELL routines to help the wk1 importer
	* Make sheet deletion multi-view safe.
	* More fixes for named expressions.
	* Remove old bogosity when importing the err form of #REF!
	* Fix handling of embedded newlines for gtk2
	* Fix Chema's bug.
	* Don't leak clipboard on exit.
	* Have Enter move the edit_pos while in the editline the same way it
	  does in the cell.
	* Support Double click in cell to start editing.
	* Change the cursor when the mouse is in the edit item.
	* Improve (Fix?) colwidth exporting in xls
	* Fix XLS name import in the presence of external links
	* Extend XLS array import
	* Take a step towards supporting external links in XLS.