@@ -269,11 +269,6 @@ fi
 
 dnl check for complete locale implementation
 AC_CHECK_HEADERS(langinfo.h)
-
-dnl we need iconv for translating to/from locale's charset when
-dnl reading/writing Excel files
-AC_CHECK_HEADERS(iconv.h)
-
 dnl iswprint/iswspace are sometimes in wctype.h
 AC_CHECK_HEADERS(wctype.h)
 
